@@ -1,5 +1,16 @@
 # databases-project
+
 Loopwedstrijd
 
-# schema
-![schema](/schema.svg)
+## JavaFX setup
+
+eerst [JavaFX SDK 19 downloaden](https://gluonhq.com/products/javafx/)
+
+daarna bij run configuratie "Edit Configurations..." -> "Modify options" -> "Add VM options"
+```bash
+--module-path uw\eigen\locatie\javafx-sdk-19\lib --add-modules=javafx.controls,javafx.fxml
+```
+
+## schema
+
+![schema](/schema/schema.svg)
